testdata/baselines/reference/submodule/compiler/arrowFunctionJSDocAnnotation.errors.txt
index.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.
index.js(10,16): error TS8010: Type annotations can only be used in TypeScript files.
index.js(11,18): error TS8010: Type annotations can only be used in TypeScript files.


==== index.js (3 errors) ====
    /**
     * @param {any} v
               ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function identity(v) {
        return v;
    }
    
    const x = identity(
        /**
         * @param {number} param
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @returns {number=}
                     ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        param => param
    );
    